任务列表操作改为单击打开详情，双击修改

--- a/frontend/src/app/shared/components/fields/edit/editing-portal/edit-form-portal.component.html
+++ b/frontend/src/app/shared/components/fields/edit/editing-portal/edit-form-portal.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="handler"
      class="inline-edit--active-field inplace-edit {{ handler.fieldName }}"
-     [ngClass]="{'-error': handler.isErrorenous }">
+     [ngClass]="{'-error': handler.isErrorenous }"
+     (click)="$event.stopPropagation()">
   <form (submit)="handler.handleUserSubmit()"
         role="form"
         tabindex="-1">
