任务详情页显示任务ID

--- a/frontend/src/app/features/work-packages/components/wp-subject/wp-subject.html
+++ b/frontend/src/app/features/work-packages/components/wp-subject/wp-subject.html
@@ -8,6 +8,7 @@
                    [fieldName]="'type'">
     </op-editable-attribute-field>
   </div>
+  <div style="align-self: center; font-size: 20px; font-weight: bold;">{{ workPackage.id }}</div>
   <div class="work-packages--details--subject work-packages--subject-element">
     <op-editable-attribute-field [resource]="workPackage"
                    [wrapperClasses]="'work-packages--details--subject work-packages--subject-element -no-label'"
