现在单机直接跑到详情，不是抽屉式的，还得傻傻的点返回，整个界面都变了，还不如原来的单机重命名，单击重命名是苹果的逻辑，就算不想重命名，至少整个界面都没有大变，还在这个上下文中，而且原来的单击也不是重命名，是单击修改，指哪里改哪里，很好用。
Revert "任务列表操作改为单击打开详情，双击修改"

This reverts commit ebdc28a8c71ab0f283a6cec69339cc6f0abd2f59.

--- a/frontend/src/app/shared/components/fields/edit/editing-portal/edit-form-portal.component.html
+++ b/frontend/src/app/shared/components/fields/edit/editing-portal/edit-form-portal.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="handler"
      class="inline-edit--active-field inplace-edit {{ handler.fieldName }}"
-     [ngClass]="{'-error': handler.isErrorenous }"
-     (click)="$event.stopPropagation()">
+     [ngClass]="{'-error': handler.isErrorenous }">
   <form (submit)="handler.handleUserSubmit()"
         role="form"
         tabindex="-1">
