用户邀请邮件模板优化

--- a/app/views/user_mailer/account_activated.html.erb
+++ b/app/views/user_mailer/account_activated.html.erb
@@ -29,12 +29,12 @@ See COPYRIGHT and LICENSE files for more details.
 <div style="font-size: 20px; color: rgba(33, 40, 60, 1);">
   尊敬的用户您好:  欢迎加入 PPM 项目过程管理团队网页版
 </div>
-<div style="font-size: 20px; color: rgba(33, 40, 60, 1);">
+<div style="font-size: 20px; color: rgba(33, 40, 60, 1); margin-top: 44p;">
   请点击此链接激活您的帐户：
 </div>
-<a href="<%= signin_url %>" style="font-size: 16px; color: rgba(46, 165, 204, 1);">
+<a href="<%= signin_url %>" style="font-size: 16px; color: rgba(46, 165, 204, 1); margin-top: 24px;">
   <%= signin_url %>
 </a>
-<div style="font-size: 20px; color: rgba(33, 40, 60, 1);">
+<div style="font-size: 20px; color: rgba(33, 40, 60, 1); margin-top: 44px;">
   如果您有任何其他问题，请联系您的管理员。
 </div>
