修复undefined method mp_qrcode_url

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -74,7 +74,7 @@
       <div style="margin-top: 15px;">
         <div style="text-align: center;">PPM公众号：</div>
         <div class="qrcode">
-          <img style="width: 129px;" src="<%= mp_qrcode_url %>" alt="" >
+          <img style="width: 129px;" src="<%= ApplicationController.helpers.mp_qrcode_url %>" alt="" >
         </div>
       </div>
     </div>
