--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -55,7 +55,7 @@
   <div class="container">
     <div class="header">
       <div class="logo">
-        <img style="width: 82px;" src="<%= logo_url %>" alt="">
+        <img style="width: 82px;" src="<%= logo_base64 %>" alt="">
       </div>
       <div class="title" style="margin-top: 36px;">
         <%= content_for(:title) if content_for?(:title) %>
@@ -74,7 +74,7 @@
       <div style="margin-top: 15px;">
         <div style="text-align: center;">PPM公众号：</div>
         <div class="qrcode">
-          <img style="width: 129px;" src="<%= ApplicationController.helpers.mp_qrcode_url %>" alt="" >
+          <img style="width: 129px;" src="<%= mp_qrcode_base64 %>" alt="" >
         </div>
       </div>
     </div>
