修改邮箱模板

--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -31,11 +31,10 @@ See COPYRIGHT and LICENSE files for more details.
 
 ---------------------------------------------------------------
 
-<% yield %>
+<%= yield %>
 
 ---------------------------------------------------------------
 
 PPM项目过程管理网址：
 <%= root_url %>
-PPM公众号：
-天华PPM
+PPM公众号： 天华PPM
