--- a/app/views/user_mailer/account_activated.text.erb
+++ b/app/views/user_mailer/account_activated.text.erb
@@ -28,6 +28,6 @@ See COPYRIGHT and LICENSE files for more details.
 ++#%>
 
 尊敬的用户您好:  欢迎加入 PPM 项目过程管理团队网页版
-请点击此链接激活您的帐户：
+请点击此链接登录您的帐户：
 <%= signin_url %>
 如果您有任何其他问题，请联系您的管理员。
