--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -6,15 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       padding: 0 10px;
     }
     .header {
-      display: flex;
       padding: 24px 0 36px;
-      flex-direction: column;
       width: 100%;
     }
     .header .logo {
@@ -26,19 +21,14 @@
       text-align: center;
     }
     .content {
-      display: flex;
       padding: 36px 0;
-      flex-direction: column;
-      align-items: center;
       text-align: center;
     }
     .footer {
       font-size: 12px;
       color: rgba(33, 40, 60, 0.50);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       padding-top: 22px;
+      text-align: center;
     }
     .footer a {
       font-size: 16px;
@@ -48,6 +38,7 @@
       border-top: 1px dashed #9ACEDD;
       max-width: 520px;
       width: 100%;
+      margin: 0 auto;
     }
   </style>
 </head>
@@ -74,7 +65,7 @@
       <div style="margin-top: 15px;">
         <div style="text-align: center;">PPM公众号：</div>
         <div class="qrcode">
-          <img style="width: 129px;" src="<%= mp_qrcode_base64 %>" alt="" >
+          <img style="width: 129px;" src="<%= mp_qrcode_base64 %>" alt="天华PPM" >
         </div>
       </div>
     </div>
