--- a/frontend/src/app/features/user-preferences/notifications-settings/page/notifications-settings-page.component.html
+++ b/frontend/src/app/features/user-preferences/notifications-settings/page/notifications-settings-page.component.html
@@ -22,10 +22,10 @@
     [label]="text.watched"
     [control]="form.get('watched')">
     <input
-      disabled
-      checked
-      type="checkbox"
       slot="input"
+      type="checkbox"
+      formControlName="watched"
+      data-qa-global-notification-type="watched"
     />
   </spot-selector-field>
 
