项目信息表单添加天华项目字段修改

--- a/frontend/src/app/shared/components/dynamic-forms/components/dynamic-inputs/select-input/select-input.component.html
+++ b/frontend/src/app/shared/components/dynamic-forms/components/dynamic-inputs/select-input/select-input.component.html
@@ -6,6 +6,7 @@
   [attr.required]="to.required"
   [multiple]="to.multiple"
   [bindLabel]="to.bindLabel"
+  [bindValue]="to.bindValue"
   [searchable]="to.searchable"
   [virtualScroll]="to.virtualScroll"
   [clearable]="to.clearable"
