--- a/app/views/warning_bar/_unsupported_browser.html.erb
+++ b/app/views/warning_bar/_unsupported_browser.html.erb
@@ -12,7 +12,7 @@
   </p>
 </div>
 
-<%= nonced_javascript_tag do %>
+<%= javascript_tag do %>
   (function() {
     // Hide initially
     var message = document.getElementById('unsupported-browser-warning');
