--- a/app/views/wiki/edit_parent_page.html.erb
+++ b/app/views/wiki/edit_parent_page.html.erb
@@ -40,7 +40,7 @@ See COPYRIGHT and LICENSE files for more details.
                  { label: WikiPage.human_attribute_name(:parent_title), include_blank: false, container_class: '-wide' } %>
   </div>
 
-  <%= nonced_javascript_tag  do -%>
+  <%= javascript_tag  do -%>
     jQuery(function() {
         var parent_select = jQuery('#wiki_page_parent_id');
         parent_select.attr('size', parent_select.children().length);
