--- a/modules/backlogs/app/views/layouts/backlogs.html.erb
+++ b/modules/backlogs/app/views/layouts/backlogs.html.erb
@@ -29,7 +29,7 @@ See COPYRIGHT and LICENSE files for more details.
 
 
 <% content_for :header_tags do %>
-  <%= nonced_javascript_tag do %>
+  <%= javascript_tag do %>
     <%= render(partial: 'shared/server_variables', formats: [:js]) %>
   <% end %>
 <% end %>
