--- a/modules/backlogs/app/views/rb_burndown_charts/_burndown.html.erb
+++ b/modules/backlogs/app/views/rb_burndown_charts/_burndown.html.erb
@@ -27,7 +27,7 @@ See COPYRIGHT and LICENSE files for more details.
 
 ++#%>
 
-<%= nonced_javascript_tag do %>
+<%= javascript_tag do %>
   jQuery(function ($) {
     var Burndown = {
       datasets: <%= dataseries(burndown).to_json.html_safe %> ,
