--- a/modules/bim/app/views/bim/ifc_models/ifc_models/_form.html.erb
+++ b/modules/bim/app/views/bim/ifc_models/ifc_models/_form.html.erb
@@ -53,7 +53,7 @@ See COPYRIGHT and LICENSE files for more details.
 
 <% if OpenProject::Configuration.direct_uploads? %>
 
-<%= nonced_javascript_tag do %>
+<%= javascript_tag do %>
   jQuery(document).ready(function() {
     var setDirectUploadFileName = function () {
       var fileNameField = jQuery('input[type=file]')
