--- a/modules/documents/app/views/documents/index.html.erb
+++ b/modules/documents/app/views/documents/index.html.erb
@@ -81,7 +81,7 @@ See COPYRIGHT and LICENSE files for more details.
   <% end %>
 <% end %>
 
-<%= nonced_javascript_tag do %>
+<%= javascript_tag do %>
   jQuery(function($) {
     $('.submit-this-form').click(function() {
       $(this).closest('form').submit();
