--- a/modules/webhooks/app/views/webhooks/outgoing/admin/_form.html.erb
+++ b/modules/webhooks/app/views/webhooks/outgoing/admin/_form.html.erb
@@ -97,7 +97,7 @@
   </div>
 </fieldset>
 
-<%= nonced_javascript_tag do %>
+<%= javascript_tag do %>
   (function($) {
     // Toggle selector for new/edit webhooks projects
     $('input[name="webhook[project_ids]"]').change(function(){
