--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -38,7 +38,7 @@ See COPYRIGHT and LICENSE files for more details.
   <!-- page specific tags -->
   <%= content_for(:header_tags) if content_for?(:header_tags) %>
   <meta name="current_menu_item" content="<%= current_menu_item %>"/>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L890BNFDND"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PXR7ZKRF48"></script>
 </head>
 <body
   class="<%= body_css_classes %> __overflowing_element_container __overflowing_body"
@@ -177,7 +177,7 @@ See COPYRIGHT and LICENSE files for more details.
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-L890BNFDND');
+  gtag('config', 'G-PXR7ZKRF48');
 </script>
 </body>
 </html>
