--- a/frontend/src/app/features/projects/components/members/project-members.component.html
+++ b/frontend/src/app/features/projects/components/members/project-members.component.html
@@ -255,15 +255,6 @@
             <div class="generic-table--sort-header-outer">
               <div class="generic-table--sort-header">
                 <span>
-                  组
-                </span>
-              </div>
-            </div>
-          </th>
-          <th>
-            <div class="generic-table--sort-header-outer">
-              <div class="generic-table--sort-header">
-                <span>
                   状态
                 </span>
               </div>
@@ -292,6 +283,15 @@
               <div class="generic-table--sort-header">
                 <span>
                   职位
+                </span>
+              </div>
+            </div>
+          </th>
+          <th>
+            <div class="generic-table--sort-header-outer">
+              <div class="generic-table--sort-header">
+                <span>
+                  手机号
                 </span>
               </div>
             </div>
