--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -58,14 +58,14 @@
     </div>
     <div class="line"></div>
     <div class="footer">
-      <div>PPM项目过程管理网址：</div>
+      <div><%= Setting.app_title %>（<%= Setting.app_short_title %>）网址：</div>
       <div style="margin-top: 12px;">
         <a href="<%= root_url %>"><%= root_url %></a>
       </div>
       <div style="margin-top: 15px;">
-        <div style="text-align: center;">PPM公众号：</div>
+        <div style="text-align: center;"><%= Setting.app_short_title %> 公众号：</div>
         <div class="qrcode">
-          <img style="width: 129px;" src="<%= mp_qrcode_base64 %>" alt="天华PPM" >
+          <img style="width: 129px;" src="<%= mp_qrcode_base64 %>" alt="天华<%= Setting.app_short_title %>" >
         </div>
       </div>
     </div>
