--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -35,6 +35,6 @@ See COPYRIGHT and LICENSE files for more details.
 
 ---------------------------------------------------------------
 
-PPM项目过程管理网址：
+<%= Setting.app_title %>（<%= Setting.app_short_title %>）网址：
 <%= root_url %>
-PPM公众号： 天华PPM
+<%= Setting.app_short_title %>公众号： 天华<%= Setting.app_short_title %>
