--- a/app/views/user_mailer/account_activated.html.erb
+++ b/app/views/user_mailer/account_activated.html.erb
@@ -32,7 +32,7 @@ See COPYRIGHT and LICENSE files for more details.
 <% end %>
 
 <div style="font-size: 20px; color: rgba(33, 40, 60, 1);">
-  尊敬的用户您好: 欢迎加入 PPM 项目过程管理团队网页版
+  尊敬的用户您好: 欢迎加入 <%= Setting.app_title %>（<%= Setting.app_short_title %>）团队网页版
 </div>
 <div style="font-size: 20px; color: rgba(33, 40, 60, 1); margin-top: 44p;">
   <%= t(:label_login) %>:
