--- a/app/views/account/_register.html.erb
+++ b/app/views/account/_register.html.erb
@@ -34,7 +34,7 @@ See COPYRIGHT and LICENSE files for more details.
     <%= error_messages_for :user %>
 
     <div class="spot-modal--header">
-      <%= I18n.t('onboarding.welcome', app_title: Setting.app_title) %>
+      <%= I18n.t('onboarding.welcome', app_title: Setting.app_short_title) %>
     </div>
     <div class="spot-divider"></div>
     <div class="spot-modal--body spot-container">
