增加属性文本编辑权限判断

--- a/frontend/src/app/shared/components/attribute-help-texts/help-text.modal.html
+++ b/frontend/src/app/shared/components/attribute-help-texts/help-text.modal.html
@@ -39,7 +39,7 @@
       </button>
       <a
         class="help-text--edit-button button spot-action-bar--action"
-        *ngIf="helpText.editText"
+        *ngIf="canEdit"
         [attr.href]="helpTextLink"
         [attr.title]="text.edit"
       >
