调整编辑器天华云文件显示样式

--- a/frontend/src/global_styles/content/user-content/_typography.sass
+++ b/frontend/src/global_styles/content/user-content/_typography.sass
@@ -92,7 +92,11 @@
     margin-bottom: 0
 
   p:first-child
-    color: rgba(0, 0, 0, 1)
+    color: rgba(49, 60, 169, 1)
+    text-decoration: underline
+    text-underline-offset: 4px
+    a
+      color: inherit
 
   &[data-is-folder='true']
     p:first-child::before
@@ -104,4 +108,4 @@
 
   p:nth-child(2)
     margin-top: 4px
-    color: rgba(49, 60, 169, 1)
+    color: rgba(0, 0, 0, .6)
