去掉项目成员分组标题行颜色

--- a/frontend/src/app/features/projects/components/members/project-members.component.html
+++ b/frontend/src/app/features/projects/components/members/project-members.component.html
@@ -326,11 +326,9 @@
             <td
               colspan="10"
               [ngStyle]="{
-                color: 'white',
+                color: 'rgb(46, 46, 46)',
                 fontWeight: 'bold',
-                borderTop: '2px solid',
-                borderTopColor: groupMember.borderColor,
-                backgroundColor: groupMember.bgColor,
+                borderTop: '1px solid rgb(32, 32, 32)',
               }"
             >
               {{ groupMember.title }}（{{ groupMember.total }}）
