参与人同步父级按钮添加显示规则

--- a/frontend/src/app/features/work-packages/components/wp-single-view-tabs/watchers-tab/watchers-tab-button-group.component.html
+++ b/frontend/src/app/features/work-packages/components/wp-single-view-tabs/watchers-tab/watchers-tab-button-group.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="allowManager" class="button-group">
   <button
+    *ngIf="allowSyncParentWatchers"
     class="button -alt-highlight"
     [disabled]="loading"
     (click)="syncParentWatchers()"
