项目成员管理新增模板下载，优化导出表格

--- a/frontend/src/app/features/projects/components/members/project-members.component.html
+++ b/frontend/src/app/features/projects/components/members/project-members.component.html
@@ -43,6 +43,7 @@
           membershipSettingsContextMenu
           [importHandle]="handleImport"
           [exportHandle]="handleExport"
+          [downloadTemplateHandle]="handleDownloadTemplate"
         >
           <op-icon icon-classes="button--icon icon-show-more"></op-icon>
         </button>
