--- a/frontend/src/global_styles/content/user-content/_typography.sass
+++ b/frontend/src/global_styles/content/user-content/_typography.sass
@@ -87,25 +87,28 @@
   border: 1px dashed rgba(138, 146, 227, 1)
 
   p
-    font-size: 12px
-    font-size: 14px
     margin-bottom: 0
 
-  p:first-child
+  .dds-file,
+  .dds-link,
+  .dds-description
+    font-size: 14px
+
+  .dds-link
     color: rgba(49, 60, 169, 1)
     text-decoration: underline
     text-underline-offset: 4px
-    a
-      color: inherit
 
-  &[data-is-folder='true']
-    p:first-child::before
+  .dds-file[data-is-folder='true'],
+  .dds-link[data-is-folder='true']
+    &::before
       content: '[文件夹] '
 
-  &[data-is-folder='false']
-    p:first-child::before
+  .dds-file[data-is-folder='false'],
+  .dds-link[data-is-folder='false']
+    &::before
       content: '[文件] '
 
-  p:nth-child(2)
+  .dds-description
     margin-top: 4px
     color: rgba(0, 0, 0, .6)
